--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.20.0",
     "express": "^4.19.2",
     "lucide-react": "^0.562.0",
+    "dotenv": "^16.4.5",
     "openai": "^4.73.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
