--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "dev:api": "node server/index.js",
+    "dev:api": "PYTHONPATH=server .venv/bin/uvicorn server.agno_api:app --reload --host 0.0.0.0 --port 8787",
     "build": "vite build",
     "preview": "vite preview"
   },
