feat: add live markdown preview

--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@braintree/sanitize-url": "^7.1.1",
     "@lobehub/ui": "^2.24.3",
     "antd": "^5.20.0",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "lucide-react": "^0.562.0",
-    "dotenv": "^16.4.5",
     "openai": "^4.73.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
